--- a/views/user/orderConfirmation.ejs
+++ b/views/user/orderConfirmation.ejs
@@ -54,92 +54,99 @@
         </style>
         <br>
         <div class="container">
-            <div class="order-confirmation text-center"> <!-- Added text-center class -->
+            <div class="order-confirmation text-center">
                 <h2 class="my-4"><i class="fas fa-check-circle" style="color: green;"></i> Order Confirmation</h2>
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="/uploads/product/resized/<%= order.items[0].productId.productImage[0]  %>"
-                            alt="<%= order.items[0].productId.name %>" style="height: 200px;width: 200px;">
-
+                        <img src="/uploads/product/resized/<%= order.items[0].productId.productImage[0] %>" 
+                             alt="<%= order.items[0].productId.name %>" style="height: 200px;width: 200px;">
                     </div>
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="order-info">
-                            <h3>Order Information</h3>
-                            <p><strong>Order ID:</strong>
-                                <%= order.ordersId %>
-                            </p>
-                            <p><strong>Date:</strong>
-                                <%= order.date.toDateString() %>
-                            </p>
-                            <p><strong>Expected Delivery Date:</strong>
-                                <%= new Date(order.expectedDelivery).toDateString() %>
-                            </p>
-                            <% if (order.paymentMethod==='paypal' ) { %>
-                                <p><strong>Payment Method:</strong>
-                                    <%= order.paymentMethod %>
-                                </p>
-                                <p><strong>Payment Status:</strong>
-                                    <% if (order.status==='retry' ) { %>
-                                        <button id="retryButton" class="btn btn-default btn-sm">Retry Payment</button>
+                    <% if (order.shippingCharge > 0 || order.offerDiscount > 0 || order.couponDiscount > 0) { %>
+                        <div class="col-md-4">
+                            <div class="order-info">
+                                <h3>Order Information</h3>
+                                <hr>
+                                <p><strong>Order ID:</strong> <%= order.ordersId %></p>
+                                <p><strong>Date:</strong> <%= order.date.toDateString() %></p>
+                                <p><strong>Expected Delivery Date:</strong> <%= new Date(order.expectedDelivery).toDateString() %></p>
+                                <% if (order.paymentMethod === 'paypal') { %>
+                                    <p><strong>Payment Method:</strong> <%= order.paymentMethod %></p>
+                                    <p><strong>Payment Status:</strong>
+                                        <% if (order.status === 'retry') { %>
+                                            <button id="retryButton" class="btn btn-default btn-sm">Retry Payment</button>
                                         <% } else { %>
                                             <%= order.status %>
-                                                <% } %>
-                                </p>
-                                <% } %>
-                                    <p><strong>Order Status:</strong>
-                                        <%= order.items[0].orderStatus %>
-                                    </p>
-                                    <p><strong>Total:</strong> ₹<%= order.totalAmount %>
-                                    </p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="order-charges">
-                            <h3>Order Charges & Discount</h3>
-                            <% if (order.shippingCharge> 0) { %>
-                                <p><strong>Shipping Charges:</strong>
-                                    <%= order.shippingCharge %>
-                                </p>
-                                <% } %>
-                                    <% if (order.offerDiscount> 0) { %>
-                                        <p><strong>Offer Discount:</strong>
-                                            <%= order.offerDiscount %>
-                                        </p>
                                         <% } %>
-                                            <% if (order.couponDiscount> 0) { %>
-                                                <p><strong>Coupon Discount:</strong>
-                                                    <%= order.couponDiscount %>
-                                                </p>
-                                                <% } %>
+                                    </p>
+                                <% } %>
+                                <p><strong>Order Status:</strong> <%= order.items[0].orderStatus %></p>
+                                <p><strong>Total:</strong> ₹<%= order.totalAmount %></p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="billing-address">
-                            <h3>Billing Address</h3>
-                            <p><strong>Name:</strong>
-                                <%= order.deliveryAddress.fullName %>
-                            </p>
-                            <p><strong>Email:</strong>
-                                <%= order.userId.email %>
-                            </p>
-                            <p><strong>Phone Number:</strong>
-                                <%= order.deliveryAddress.mobileNumber %>
-                            </p>
-                            <p><strong>Address:</strong>
-                                <%= order.deliveryAddress.houseNo %>, <%= order.deliveryAddress.area %>, <%=
-                                            order.deliveryAddress.city %>, <%= order.deliveryAddress.state %>
-                            </p>
-                            <p><strong>Pincode:</strong>
-                                <%= order.deliveryAddress.pincode %>
-                            </p>
+                        <div class="col-md-4">
+                            <div class="order-charges">
+                                <h3> Charges & Discount</h3>
+                                <hr>
+                                <% if (order.shippingCharge > 0) { %>
+                                    <p><strong>Shipping Charges:</strong> <%= order.shippingCharge %></p>
+                                <% } %>
+                                <% if (order.offerDiscount > 0) { %>
+                                    <p><strong>Offer Discount:</strong> <%= order.offerDiscount %></p>
+                                <% } %>
+                                <% if (order.couponDiscount > 0) { %>
+                                    <p><strong>Coupon Discount:</strong> <%= order.couponDiscount %></p>
+                                <% } %>
+                            </div>
                         </div>
-                    </div>
+                        <div class="col-md-4">
+                            <div class="billing-address">
+                                <h3>Billing Address</h3>
+                                <hr>
+                                <p><strong>Name:</strong> <%= order.deliveryAddress.fullName %></p>
+                                <p><strong>Email:</strong> <%= order.userId.email %></p>
+                                <p><strong>Phone Number:</strong> <%= order.deliveryAddress.mobileNumber %></p>
+                                <p><strong>Address:</strong> <%= order.deliveryAddress.houseNo %>, <%= order.deliveryAddress.area %>, <%= order.deliveryAddress.city %>, <%= order.deliveryAddress.state %></p>
+                                <p><strong>Pincode:</strong> <%= order.deliveryAddress.pincode %></p>
+                            </div>
+                        </div>
+                    <% } else { %>
+                        <div class="col-md-6">
+                            <div class="order-info">
+                                <h3>Order Information</h3>
+                                <hr>
+                                <p><strong>Order ID:</strong> <%= order.ordersId %></p>
+                                <p><strong>Date:</strong> <%= order.date.toDateString() %></p>
+                                <p><strong>Expected Delivery Date:</strong> <%= new Date(order.expectedDelivery).toDateString() %></p>
+                                <% if (order.paymentMethod === 'paypal') { %>
+                                    <p><strong>Payment Method:</strong> <%= order.paymentMethod %></p>
+                                    <p><strong>Payment Status:</strong>
+                                        <% if (order.status === 'retry') { %>
+                                            <button id="retryButton" class="btn btn-default btn-sm">Retry Payment</button>
+                                        <% } else { %>
+                                            <%= order.status %>
+                                        <% } %>
+                                    </p>
+                                <% } %>
+                                <p><strong>Order Status:</strong> <%= order.items[0].orderStatus %></p>
+                                <p><strong>Total:</strong> ₹<%= order.totalAmount %></p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="billing-address">
+                                <h3>Billing Address</h3>
+                                <hr>
+                                <p><strong>Name:</strong> <%= order.deliveryAddress.fullName %></p>
+                                <p><strong>Email:</strong> <%= order.userId.email %></p>
+                                <p><strong>Phone Number:</strong> <%= order.deliveryAddress.mobileNumber %></p>
+                                <p><strong>Address:</strong> <%= order.deliveryAddress.houseNo %>, <%= order.deliveryAddress.area %>, <%= order.deliveryAddress.city %>, <%= order.deliveryAddress.state %></p>
+                                <p><strong>Pincode:</strong> <%= order.deliveryAddress.pincode %></p>
+                            </div>
+                        </div>
+                    <% } %>
                 </div>
-
-
                 <br>
                 <div class="row">
                     <div class="col-md-12">
@@ -148,6 +155,8 @@
                 </div>
             </div>
         </div>
+        
+        
         <br>
         <br>
 
