--- a/backup/productDetails.ejs
+++ b/backup/productDetails.ejs
@@ -1243,3 +1243,443 @@ const insertUser = async (req, res) => {
         return res.status(500).json({ success: false, message: 'Internal Server Error. Please try again later.' });
     }
 };
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<%- include('../layouts/header.ejs') %>
+  <%- include('../layouts/navbar.ejs') %>
+    <style>
+      .containers {
+        background-color: #f0f8ff;
+        padding: 20px;
+      }
+
+      .order-details-container {
+        background-color: #d4edda;
+        border-radius: 10px;
+        padding: 20px;
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .order-details-container h2 {
+        color: #14ee47;
+      }
+
+      .order-info,
+      .order-charges,
+      .billing-address {
+        background-color: #f9f9f9;
+        padding: 20px;
+        margin-bottom: 20px;
+        border-radius: 5px;
+        height: 100%;
+      }
+
+      .order-info h3,
+      .order-charges h3,
+      .billing-address h3 {
+        margin-top: 0;
+      }
+
+      .order-info p,
+      .order-charges p,
+      .billing-address p {
+        margin-bottom: 8px;
+      }
+
+      .order-info button {
+        margin-top: 8px;
+      }
+
+      .order-info strong,
+      .order-charges strong,
+      .billing-address strong {
+        font-weight: bold;
+      }
+
+      .btn-invoice {
+        background-color: #007bff;
+        color: white;
+        border: none;
+        padding: 5px 10px;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      .btn-invoice:hover {
+        background-color: #0056b3;
+      }
+
+      .btn-warnings,
+      .btn-dangers,
+      .btn-infos {
+        margin-top: 8px;
+      }
+    </style>
+    <div class="container">
+      <br>
+      <div class="order-details-container text-center">
+        <h2 class="my-4"><i class="fas fa-info-circle" style="color: green;"></i> Order Details</h2>
+        
+        <div class="row">
+          <div class="col-md-12">
+            <% if (!selectedItem) { %>
+              <div class="alert alert-info" role="alert">
+                No selected item found. Please select an item.
+              </div>
+              <% } else { %>
+                <img src="/uploads/product/resized/<%= selectedItem.productId.productImage[0] %>"
+                  alt="<%= selectedItem.productId.name %>" style="height: 200px;width: 200px;">
+                <% } %>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <% if (order.shippingCharge> 0 || order.offerDiscount > 0 || order.couponDiscount > 0) { %>
+            <div class="col-md-4">
+              <div class="order-info">
+                <h3>Order Information</h3>
+                <hr>
+                <p><strong>Order ID:</strong>
+                  <%= order.ordersId %>
+                </p>
+                <p><strong>Date:</strong>
+                  <%= order.date.toDateString() %>
+                </p>
+                <p><strong>Expected Delivery Date:</strong>
+                  <%= new Date(order.expectedDelivery).toDateString() %>
+                </p>
+                <% if (order.paymentMethod==='paypal' ) { %>
+                  <p><strong>Payment Method:</strong>
+                    <%= order.paymentMethod %>
+                  </p>
+                  <p><strong>Payment Status:</strong>
+                    <% if (order.status==='retry' ) { %>
+                      <button id="retryButton" class="btn btn-default btn-sm">Retry Payment</button>
+                      <% } else { %>
+                        <%= order.status %>
+                          <% } %>
+                  </p>
+                  <% } %>
+                    <p><strong>Order Status:</strong>
+                      <%= selectedItem.orderStatus %>
+                    </p>
+                    <p><strong>Total:</strong> ₹<%= (selectedItem.price * selectedItem.quantity) %>
+                    </p>
+                    <% if (selectedItem.orderStatus==='delivered' ) { %>
+                      <button class="btn-invoice btn-sm">Download Invoice</button>
+                      <button class="btn-warnings return-product" data-item-id="<%= selectedItem._id %>">Return
+                        Product</button>
+                      <% } else if (selectedItem.orderStatus==='cancelled' ) { %>
+                        <button class="btn-dangers cancel-product" disabled>Cancelled</button>
+                        <% } else if (selectedItem.orderStatus==='awaiting approval' ) { %>
+                          <button class="btn-infos cancel-product" disabled>Awaiting Approval</button>
+                          <% } else if (selectedItem.orderStatus==='returned' ) { %>
+                            <button class="btn-dangers return-product" disabled>Returned</button>
+                            <% } else { %>
+                              <button class="btn-warnings cancel-product" data-item-id="<%= selectedItem._id %>">Cancel
+                                Product</button>
+                              <% } %>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="order-charges">
+                <h3> Charges & Discount</h3>
+                <hr>
+                <% if (order.shippingCharge> 0) { %>
+                  <p><strong>Shipping Charges:</strong>
+                    <%= order.shippingCharge %>
+                  </p>
+                  <% } %>
+                    <% if (order.offerDiscount> 0) { %>
+                      <p><strong>Offer Discount:</strong>
+                        <%= order.offerDiscount %>
+                      </p>
+                      <% } %>
+                        <% if (order.couponDiscount> 0) { %>
+                          <p><strong>Coupon Discount:</strong>
+                            <%= order.couponDiscount %>
+                          </p>
+                          <% } %>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="billing-address">
+                <h3>Billing Address</h3>
+                <hr>
+                <p><strong>Name:</strong>
+                  <%= order.deliveryAddress.fullName %>
+                </p>
+                <p><strong>Email:</strong>
+                  <%= order.userId.email %>
+                </p>
+                <p><strong>Phone Number:</strong>
+                  <%= order.deliveryAddress.mobileNumber %>
+                </p>
+                <p><strong>Address:</strong>
+                  <%= order.deliveryAddress.houseNo %>, <%= order.deliveryAddress.area %>, <%=
+                        order.deliveryAddress.city %>, <%= order.deliveryAddress.state %>
+                </p>
+                <p><strong>Pincode:</strong>
+                  <%= order.deliveryAddress.pincode %>
+                </p>
+              </div>
+            </div>
+            <% } else { %>
+              <div class="col-md-6">
+                <div class="order-info">
+                  <h3>Order Information</h3>
+                  <hr>
+                  <p><strong>Order ID:</strong>
+                    <%= order.ordersId %>
+                  </p>
+                  <p><strong>Date:</strong>
+                    <%= order.date.toDateString() %>
+                  </p>
+                  <p><strong>Expected Delivery Date:</strong>
+                    <%= new Date(order.expectedDelivery).toDateString() %>
+                  </p>
+                  <% if (order.paymentMethod==='paypal' ) { %>
+                    <p><strong>Payment Method:</strong>
+                      <%= order.paymentMethod %>
+                    </p>
+                    <p><strong>Payment Status:</strong>
+                      <% if (order.status==='retry' ) { %>
+                        <button id="retryButton" class="btn btn-default btn-sm">Retry Payment</button>
+                        <% } else { %>
+                          <%= order.status %>
+                            <% } %>
+                    </p>
+                    <% } %>
+                      <p><strong>Order Status:</strong>
+                        <%= selectedItem.orderStatus %>
+                      </p>
+                      <p><strong>Total:</strong> ₹<%= (selectedItem.price * selectedItem.quantity) %>
+                      </p>
+                      <% if (selectedItem.orderStatus==='delivered' ) { %>
+                        <button class="btn-invoice btn-sm">Download Invoice</button>
+                        <button class="btn-warnings return-product" data-item-id="<%= selectedItem._id %>">Return
+                          Product</button>
+                        <% } else if (selectedItem.orderStatus==='cancelled' ) { %>
+                          <button class="btn-dangers cancel-product" disabled>Cancelled</button>
+                          <% } else if (selectedItem.orderStatus==='awaiting approval' ) { %>
+                            <button class="btn-infos cancel-product" disabled>Awaiting Approval</button>
+                            <% } else if (selectedItem.orderStatus==='returned' ) { %>
+                              <button class="btn-dangers return-product" disabled>Returned</button>
+                              <% } else { %>
+                                <button class="btn-warnings cancel-product"
+                                  data-item-id="<%= selectedItem._id %>">Cancel Product</button>
+                                <% } %>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="billing-address">
+                  <h3>Billing Address</h3>
+                  <hr>
+                  <p><strong>Name:</strong>
+                    <%= order.deliveryAddress.fullName %>
+                  </p>
+                  <p><strong>Email:</strong>
+                    <%= order.userId.email %>
+                  </p>
+                  <p><strong>Phone Number:</strong>
+                    <%= order.deliveryAddress.mobileNumber %>
+                  </p>
+                  <p><strong>Address:</strong>
+                    <%= order.deliveryAddress.houseNo %>, <%= order.deliveryAddress.area %>, <%=
+                          order.deliveryAddress.city %>, <%= order.deliveryAddress.state %>
+                  </p>
+                  <p><strong>Pincode:</strong>
+                    <%= order.deliveryAddress.pincode %>
+                  </p>
+                </div>
+              </div>
+              <% } %>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal for cancellation and return -->
+    <div class="modal fade" id="cancellationModal" tabindex="-1" aria-labelledby="cancellationModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="cancellationModalLabel">Action Title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="cancellationForm">
+              <div class="mb-3">
+                <label for="cancellationReason" class="form-label">Reason</label>
+                <textarea id="cancellationReason" class="form-control" rows="4"
+                  placeholder="Enter reason for action"></textarea>
+                <div id="cancellationReasonError" class="invalid-feedback"></div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn-primary" id="confirmCancellation">Confirm</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+    <br>
+
+
+    <%- include('../layouts/footer.ejs') %>
+      <%- include('../layouts/preloader.ejs') %>
+        <%- include('../layouts/script.ejs') %>
+          <!-- Add SweetAlert JS -->
+          <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+          <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+          <script>
+            document.querySelectorAll('.cancel-product, .return-product').forEach(button => {
+              button.addEventListener('click', function () {
+                const itemId = this.getAttribute('data-item-id');
+                const actionType = this.classList.contains('cancel-product') ? 'cancel' : 'return';
+
+                // Update modal content based on action type
+                const modalTitle = actionType === 'cancel' ? 'Cancel Product' : 'Return Product';
+                const confirmButtonText = actionType === 'cancel' ? 'Cancel' : 'Return';
+                const actionReasonPlaceholder = actionType === 'cancel' ? 'Enter reason for cancellation' : 'Enter reason for return';
+
+                document.getElementById('cancellationModalLabel').textContent = modalTitle;
+                document.getElementById('cancellationReason').placeholder = actionReasonPlaceholder;
+                document.getElementById('confirmCancellation').textContent = confirmButtonText;
+
+                $('#cancellationModal').modal('show');
+
+                $('#confirmCancellation').off('click').on('click', function () {
+                  const cancellationReason = document.getElementById('cancellationReason').value.trim();
+                  const cancellationReasonError = document.getElementById('cancellationReasonError');
+                  if (!cancellationReason) {
+                    cancellationReasonError.textContent = 'Please enter a reason for ' + (actionType === 'cancel' ? 'cancellation' : 'return');
+                    cancellationReasonError.classList.add('is-invalid');
+                    return;
+                  } else {
+                    cancellationReasonError.textContent = '';
+                    cancellationReasonError.classList.remove('is-invalid');
+                  }
+
+                  const orderId = '<%= order._id %>';
+                  const endpoint = actionType === 'cancel' ? `/order/cancel/${orderId}/${itemId}` : `/order/return/${orderId}/${itemId}`;
+                  fetch(endpoint, {
+                    method: 'POST',
+                    headers: {
+                      'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ itemId, orderId, cancellationReason })
+                  })
+                    .then(response => response.json())
+                    .then(data => {
+                      if (data.success) {
+                        // Use SweetAlert for success message
+                        Swal.fire({
+                          icon: 'success',
+                          title: 'Success',
+                          text: data.message,
+                          confirmButtonText: 'OK',
+                        }).then(() => {
+                          $('#cancellationModal').modal('hide'); // Close the modal
+                          location.reload(); // Reload the page to reflect the changes
+                        });
+                      } else {
+                        // Use SweetAlert for error message
+                        Swal.fire({
+                          icon: 'error',
+                          title: 'Error',
+                          text: `Failed to ${actionType} product. Please try again.`,
+                          confirmButtonText: 'OK'
+                        });
+                      }
+                    })
+                    .catch(error => {
+                      console.error('Error:', error);
+                      // Use SweetAlert for generic error message
+                      Swal.fire({
+                        icon: 'error',
+                        title: 'Error',
+                        text: 'An error occurred. Please try again.',
+                        confirmButtonText: 'OK'
+                      });
+                    });
+                });
+              });
+            });
+
+            document.getElementById('retryButton').addEventListener('click', function () {
+              var ordersId = `<%= order.ordersId %>`;
+              Swal.fire({
+                title: 'Are you sure?',
+                text: "You are about to retry the payment.",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonText: 'Yes, retry!',
+                cancelButtonText: 'No, cancel!'
+              }).then((result) => {
+                if (result.isConfirmed) {
+                  axios.put(`/order/retryPayment/${ordersId}`)
+                    .then(response => {
+                      if (response.data.approvalUrl) {
+                        window.location.href = response.data.approvalUrl;
+                      } else if (response.data.success) {
+                        Swal.fire(
+                          'Success!',
+                          'Payment retried successfully.',
+                          'success'
+                        );
+                        setTimeout(() => {
+                          const orderConfirmationUrl = `/order/orderConfirmation/${response.data.orderId}`;
+                          window.location.href = orderConfirmationUrl;
+                        }, 3000);
+                      } else {
+                        Swal.fire({
+                          icon: 'error',
+                          title: 'Oops...',
+                          text: 'PayPal payment initiation failed. Please try again.',
+                          confirmButtonText: 'Okay'
+                        });
+                      }
+                    })
+                    .catch(error => {
+                      console.error('Error retrying payment:', error.response ? error.response.data : error.message);
+                      Swal.fire(
+                        'Error!',
+                        'An error occurred while retrying the payment. Please try again.',
+                        'error'
+                      );
+                    });
+                }
+              });
+            });
+
+
+
+          </script>
