latest version update

--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -173,7 +173,7 @@
                                                                 <%= order.paymentMethod %>
                                                             </td>
                                                             <td class="center" rowspan="<%= order.items.length %>">
-                                                                ₹<%= order.total.toFixed(2) %>
+                                                                ₹<%= order.total %>
                                                             </td>
                                                             <% } %>
 
