--- a/views/user/orderConfirmation.ejs
+++ b/views/user/orderConfirmation.ejs
@@ -1,10 +1,6 @@
 <%- include('../layouts/header.ejs') %>
     <%- include('../layouts/navbar.ejs') %>
         <style>
-            .container {
-                margin-top: 30px;
-            }
-
             .containers {
                 background-color: #f0f8ff;
                 padding: 20px;
@@ -54,7 +50,13 @@
             .billing-address strong {
                 font-weight: bold;
             }
+
+            .btn-gap {
+                margin-right: 20px;
+            }
         </style>
+        <br>
+        <br>
         <div class="container">
             <div class="order-confirmation text-center">
                 <h2 class="my-4"><i class="fas fa-check-circle" style="color: green;"></i> Order Confirmation</h2>
@@ -74,35 +76,36 @@
                                 <p><strong>Order ID:</strong>
                                     <%= order.ordersId %>
                                 </p>
-                                <p><strong>Date:</strong>
+                                <p><strong>Order Date:</strong>
                                     <%= order.date.toDateString() %>
                                 </p>
                                 <p><strong>Expected Delivery Date:</strong>
                                     <%= new Date(order.expectedDelivery).toDateString() %>
                                 </p>
-                              
-                                        <p><strong>Order Status:</strong>
-                                            <%= order.items[0].orderStatus %>
-                                        </p>
-                                        <p><strong>Total:</strong> ₹<%= order.totalAmount %>
-                                        </p>
+
+                                <p><strong>Order Status:</strong>
+                                    <%= order.items[0].orderStatus %>
+                                </p>
+                                <p><strong>Total:</strong> ₹<%= order.totalAmount %>
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="order-charges">
                                 <h3>Payment Deatils</h3>
                                 <hr>
-                                    <p><strong>Payment Method:</strong>
-                                        <%= order.paymentMethod %>
-                                    </p>
-                                    <p><strong>Payment Status:</strong>
-                                        <% if (order.status==='retry' ) { %>
-                                            <button id="retryButton" class="btn btn-default btn-sm">Retry
-                                                Payment</button>
-                                            <% } else { %>
-                                                <%= order.status %>
-                                                    <% } %>
-                                    </p>
+                                <p><strong>Payment Method:</strong>
+                                    <%= order.paymentMethod %>
+                                </p>
+                                <p><strong>Payment Status:</strong>
+                                    <% if (order.status==='retry' ) { %>
+                                        <button id="retryButton" class="btn-sm btn-primary">Retry
+                                            Payment</button>
+                                        <% } else { %>
+                                            <%= order.status %>
+                                                <% } %>
+                                </p>
+                                <br>
                                 <h3> Charges & Discount</h3>
                                 <hr>
                                 <% if (order.shippingCharge> 0) { %>
@@ -112,12 +115,12 @@
                                     <% } %>
                                         <% if (order.offerDiscount> 0) { %>
                                             <p><strong>Offer Discount:</strong>
-                                                <%= order.offerDiscount %>
+                                                <%= order.offerDiscount.toFixed(2) %>
                                             </p>
                                             <% } %>
                                                 <% if (order.couponDiscount> 0) { %>
                                                     <p><strong>Coupon Discount:</strong>
-                                                        <%= order.couponDiscount %>
+                                                        <%= order.couponDiscount.toFixed(2) %>
                                                     </p>
                                                     <% } %>
                             </div>
@@ -130,7 +133,7 @@
                                     <%= order.deliveryAddress.fullName %>
                                 </p>
                                 <p><strong>Email:</strong>
-                                    
+
                                     <%= order.userId.email %>
                                 </p>
                                 <p><strong>Phone Number:</strong>
@@ -156,30 +159,28 @@
                                     <p><strong>Order ID:</strong>
                                         <%= order.ordersId %>
                                     </p>
-                                    <p><strong>Date:</strong>
+                                    <p><strong>Order Date:</strong>
                                         <%= order.date.toDateString() %>
                                     </p>
                                     <p><strong>Expected Delivery Date:</strong>
                                         <%= new Date(order.expectedDelivery).toDateString() %>
                                     </p>
-                                    <% if (order.paymentMethod==='paypal' ) { %>
-                                        <p><strong>Payment Method:</strong>
-                                            <%= order.paymentMethod %>
-                                        </p>
-                                        <p><strong>Payment Status:</strong>
-                                            <% if (order.status==='retry' ) { %>
-                                                <button id="retryButton" class="btn btn-default btn-sm">Retry
-                                                    Payment</button>
-                                                <% } else { %>
-                                                    <%= order.status %>
-                                                        <% } %>
-                                        </p>
-                                        <% } %>
-                                            <p><strong>Order Status:</strong>
-                                                <%= order.items[0].orderStatus %>
-                                            </p>
-                                            <p><strong>Total:</strong> ₹<%= order.totalAmount %>
-                                            </p>
+                                    <p><strong>Payment Method:</strong>
+                                        <%= order.paymentMethod %>
+                                    </p>
+                                    <p><strong>Payment Status:</strong>
+                                        <% if (order.status==='retry' ) { %>
+                                            <button id="retryButton" class="btn-sm btn-primary">Retry
+                                                Payment</button>
+                                            <% } else { %>
+                                                <%= order.status %>
+                                                    <% } %>
+                                    </p>
+                                    <p><strong>Order Status:</strong>
+                                        <%= order.items[0].orderStatus %>
+                                    </p>
+                                    <p><strong>Total:</strong> ₹<%= order.totalAmount %>
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -208,8 +209,10 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-md-12">
-                        <a href="/shop" class="btn btn-default">Continue Shopping</a>
+                    <div class="col-12">
+                        <a href="/shop" class="btn btn-default btn-gap">Continue Shopping</a>
+                        <a href="/" class="btn btn-default">Go To Home</a>
+
                     </div>
                 </div>
             </div>
@@ -222,52 +225,58 @@
         <%- include('../layouts/footer.ejs') %>
             <%- include('../layouts/script.ejs') %>
                 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
                 <script>
-                    document.getElementById('retryButton').addEventListener('click', function () {
-                        var ordersId = `<%= order.ordersId %>`;
-                        Swal.fire({
-                            title: 'Are you sure?',
-                            text: "You are about to retry the payment.",
-                            icon: 'warning',
-                            showCancelButton: true,
-                            confirmButtonText: 'Yes, retry!',
-                            cancelButtonText: 'No, cancel!'
-                        }).then((result) => {
-                            if (result.isConfirmed) {
-                                axios.put(`/order/retryPayment/${ordersId}`)
-                                    .then(response => {
-                                        if (response.data.approvalUrl) {
-                                            window.location.href = response.data.approvalUrl;
-                                        } else if (response.data.success) {
-                                            Swal.fire(
-                                                'Success!',
-                                                'Payment retried successfully.',
-                                                'success'
-                                            );
-                                            setTimeout(() => {
-                                                const orderConfirmationUrl = `/order/orderConfirmation/${response.data.orderId}`;
-                                                window.location.href = orderConfirmationUrl;
-                                            }, 3000);
-                                        } else {
-                                            Swal.fire({
-                                                icon: 'error',
-                                                title: 'Oops...',
-                                                text: 'PayPal payment initiation failed. Please try again.',
-                                                confirmButtonText: 'Okay'
+                    document.addEventListener('DOMContentLoaded', function () {
+                        const retryButton = document.getElementById('retryButton');
+                        if (retryButton) {
+                            retryButton.addEventListener('click', function () {
+                                const ordersId = '<%= order.ordersId %>';
+                                Swal.fire({
+                                    title: 'Are you sure?',
+                                    text: "You are about to retry the payment.",
+                                    icon: 'warning',
+                                    showCancelButton: true,
+                                    confirmButtonText: 'Yes, retry!',
+                                    cancelButtonText: 'No, cancel!'
+                                }).then((result) => {
+                                    if (result.isConfirmed) {
+                                        axios.put(`/order/retryPayment/${ordersId}`)
+                                            .then(response => {
+                                                if (response.data.approvalUrl) {
+                                                    window.location.href = response.data.approvalUrl;
+                                                } else if (response.data.success) {
+                                                    Swal.fire(
+                                                        'Success!',
+                                                        'Payment retried successfully.',
+                                                        'success'
+                                                    );
+                                                    setTimeout(() => {
+                                                        const orderConfirmationUrl = `/order/orderConfirmation/${response.data.orderId}`;
+                                                        window.location.href = orderConfirmationUrl;
+                                                    }, 3000);
+                                                } else {
+                                                    Swal.fire({
+                                                        icon: 'error',
+                                                        title: 'Oops...',
+                                                        text: 'PayPal payment initiation failed. Please try again.',
+                                                        confirmButtonText: 'Okay'
+                                                    });
+                                                }
+                                            })
+                                            .catch(error => {
+                                                console.error('Error retrying payment:', error.response ? error.response.data : error.message);
+                                                Swal.fire(
+                                                    'Error!',
+                                                    'An error occurred while retrying the payment. Please try again.',
+                                                    'error'
+                                                );
                                             });
-                                        }
-                                    })
-                                    .catch(error => {
-                                        console.error('Error retrying payment:', error.response ? error.response.data : error.message);
-                                        Swal.fire(
-                                            'Error!',
-                                            'An error occurred while retrying the payment. Please try again.',
-                                            'error'
-                                        );
-                                    });
-                            }
-                        });
+                                    }
+                                });
+                            });
+                        }
                     });
 
 
