--- a/views/user/orderDeatil.ejs
+++ b/views/user/orderDeatil.ejs
@@ -1,10 +1,6 @@
 <%- include('../layouts/header.ejs') %>
   <%- include('../layouts/navbar.ejs') %>
     <style>
-      .container {
-        margin-top: 30px;
-      }
-
       .containers {
         background-color: #d4edda;
         padding: 20px;
@@ -28,7 +24,7 @@
         gap: 20px;
       }
 
-  
+
 
       .invoice {
         background-color: #007bff;
@@ -75,6 +71,8 @@
         font-weight: bold;
       }
     </style>
+    <br>
+    <br>
     <div class="container">
       <div class="row order-Details">
         <div class="col-md-12 text-center">
@@ -85,11 +83,10 @@
             <% } else { %>
               <div class="order-details">
                 <h2 class="my-4"><i class="fas fa-check-circle" style="color: green;"></i> Order Details</h2>
-                <% if (selectedItem.orderStatus==='delivered' ) { %>
-                  <button class="btn-sm invoice ">Download Invoice</button>
-                  <% } %>
-
-              </div>
+                <% if (selectedItem.orderStatus === 'delivered') { %>
+                    <button id="invoiceButton" class="btn-sm invoice">Download Invoice</button>
+                <% } %>
+            </div>
 
               <img src="/uploads/product/resized/<%= selectedItem.productId.productImage[0] %>"
                 style="width: 200px;height: 200px;" alt="<%= selectedItem.productId.name %>">
@@ -132,34 +129,34 @@
               <p><strong>Order ID:</strong>
                 <%= order.ordersId %>
               </p>
-              <p><strong>Date:</strong>
+              <p><strong>Order Date:</strong>
                 <%= order.date.toDateString() %>
               </p>
               <p><strong>Expected Delivery Date:</strong>
                 <%= new Date(order.expectedDelivery).toDateString() %>
               </p>
-           
-                  <p><strong>Order Status:</strong>
-                    <%= order.items[0].orderStatus %>
-                  </p>
-                  <p><strong>Total:</strong> ₹<%= (selectedItem.price * selectedItem.quantity) %>
+
+              <p><strong>Order Status:</strong>
+                <%= order.items[0].orderStatus %>
+              </p>
+              <p><strong>Total:</strong> ₹<%= (selectedItem.price * selectedItem.quantity) %>
             </div>
           </div>
           <div class="col-md-4">
             <div class="order-charges">
               <h3>Payment Deatils</h3>
               <hr>
-                <p><strong>Payment Method:</strong>
-                  <%= order.paymentMethod %>
-                </p>
-                <p><strong>Payment Status:</strong>
-                  <% if (order.status==='retry' ) { %>
-                    <button id="retryButton" class="btn btn-default btn-sm">Retry Payment</button>
-                    <% } else { %>
-                      <%= order.status %>
-                        <% } %>
-                </p>
-                <br>
+              <p><strong>Payment Method:</strong>
+                <%= order.paymentMethod %>
+              </p>
+              <p><strong>Payment Status:</strong>
+                <% if (order.status==='retry' ) { %>
+                  <button id="retryButton" class="btn-sm btn-primary">Retry Payment</button>
+                  <% } else { %>
+                    <%= order.status %>
+                      <% } %>
+              </p>
+              <br>
               <h3> Charges & Discount</h3>
               <hr>
               <% if (order.shippingCharge> 0) { %>
@@ -169,12 +166,12 @@
                 <% } %>
                   <% if (order.offerDiscount> 0) { %>
                     <p><strong>Offer Discount:</strong>
-                      <%= order.offerDiscount %>
+                      <%= order.offerDiscount.toFixed(2) %>
                     </p>
                     <% } %>
                       <% if (order.couponDiscount> 0) { %>
                         <p><strong>Coupon Discount:</strong>
-                          <%= order.couponDiscount %>
+                          <%= order.couponDiscount.toFixed(2) %>
                         </p>
                         <% } %>
             </div>
@@ -187,7 +184,7 @@
               <p><strong>Name:</strong>
                 <%= order.deliveryAddress.fullName %>
               </p>
-            
+
               <p><strong>Phone Number:</strong>
                 <%= order.deliveryAddress.mobileNumber %>
               </p>
@@ -195,7 +192,9 @@
                 <%= order.deliveryAddress.houseNo %>, <%= order.deliveryAddress.area %>, <%= order.deliveryAddress.city
                       %>
               </p>
-              <p> <strong>State:</strong><%= order.deliveryAddress.state %></p>
+              <p> <strong>State:</strong>
+                <%= order.deliveryAddress.state %>
+              </p>
               <p><strong>Pincode:</strong>
                 <%= order.deliveryAddress.pincode %>
               </p>
@@ -209,28 +208,26 @@
                 <p><strong>Order ID:</strong>
                   <%= order.ordersId %>
                 </p>
-                <p><strong>Date:</strong>
+                <p><strong>Order Date:</strong>
                   <%= order.date.toDateString() %>
                 </p>
                 <p><strong>Expected Delivery Date:</strong>
                   <%= new Date(order.expectedDelivery).toDateString() %>
                 </p>
-                <% if (order.paymentMethod==='paypal' ) { %>
-                  <p><strong>Payment Method:</strong>
-                    <%= order.paymentMethod %>
-                  </p>
-                  <p><strong>Payment Status:</strong>
-                    <% if (order.status==='retry' ) { %>
-                      <button id="retryButton" class="btn btn-default btn-sm">Retry Payment</button>
-                      <% } else { %>
-                        <%= order.status %>
-                          <% } %>
-                  </p>
-                  <% } %>
-                    <p><strong>Order Status:</strong>
-                      <%= order.items[0].orderStatus %>
-                    </p>
-                    <p><strong>Total:</strong> ₹<%= (selectedItem.price * selectedItem.quantity) %>
+                <p><strong>Payment Method:</strong>
+                  <%= order.paymentMethod %>
+                </p>
+                <p><strong>Payment Status:</strong>
+                  <% if (order.status==='retry' ) { %>
+                    <button id="retryButton" class="btn-sm btn-primary">Retry Payment</button>
+                    <% } else { %>
+                      <%= order.status %>
+                        <% } %>
+                </p>
+                <p><strong>Order Status:</strong>
+                  <%= order.items[0].orderStatus %>
+                </p>
+                <p><strong>Total:</strong> ₹<%= (selectedItem.price * selectedItem.quantity) %>
               </div>
             </div>
             <div class="col-md-6">
@@ -240,7 +237,7 @@
                 <p><strong>Name:</strong>
                   <%= order.deliveryAddress.fullName %>
                 </p>
-               
+
                 <p><strong>Phone Number:</strong>
                   <%= order.deliveryAddress.mobileNumber %>
                 </p>
@@ -418,9 +415,12 @@
               });
             });
 
-            document.getElementById('retryButton').addEventListener('click', function () {
-              var ordersId = `<%= order.ordersId %>`;
-              Swal.fire({
+            document.addEventListener('DOMContentLoaded', function () {
+              const retryButton = document.getElementById('retryButton');
+              if (retryButton) {
+                retryButton.addEventListener('click', function () {
+                  const ordersId = '<%= order.ordersId %>';
+                  Swal.fire({
                 title: 'Are you sure?',
                 text: "You are about to retry the payment.",
                 icon: 'warning',
@@ -462,8 +462,20 @@
                     });
                 }
               });
+                });
+              }
             });
+        
 
 
-
+            document.addEventListener('DOMContentLoaded', function () {
+              const invoiceButton = document.getElementById('invoiceButton');
+              if (invoiceButton) {
+                invoiceButton.addEventListener('click', function () {
+                  const orderId = '<%= order._id %>';
+                  console.log("orderId",orderId)
+                  window.location.href = `/order/invoice/${orderId}`;
+                });
+              }
+            });
           </script>
